feat: add support for local type mapping properties files (#252)
Co-authored-by: Dewey jose <dewjose@Deweys-MacBook-Pro.local>